# drake

./: optim8oct.m
common/trajectories/: piecewise_polynomial.cc  piecewise_polynomial.h
examples/iiwa_soccer/: BUILD.bazel  arrows_to_lcm.cc  arrows_to_lcm.h  compliant_controller.cc  compliant_controller.h  figure_eight.cc  fsm_system.cc  fsm_system.h  impedance_controller.cc  impedance_controller.h  junction_box.cc  kuka_simulation.cc  magic_force.h  nonconstant_abstract_source.cc  nonconstant_abstract_source.h  nonconstant_vector_source.cc  nonconstant_vector_source.h  poly_utilities.h  soccer_common.h  source_switcher.cc  source_switcher.h  spline_distance_cost.h  spline_trajectory.cc  spline_trajectory.h  target_shifter.cc  target_shifter.h  time_based_source_switcher.cc  time_based_source_switcher.h  traj_opt_test.cc  trajectory.proto  trajectory_evaluator.cc  trajectory_evaluator.h  trajectory_evaluator_vector.cc  trajectory_evaluator_vector.h
examples/iiwa_soccer/models/: soccer_ball.urdf
examples/iiwa_soccer/test/: poly_utilities_test.cc
examples/minimal_in_out/: BUILD.bazel  TestPchip.cc  do_example.cc  minimal_system.cc  minimal_system.h  point_drawer.cc  point_drawer.h  test_time_based.cc  time_based_source_switcher.cc  time_based_source_switcher.h
lcmtypes/: BUILD.bazel  lcmt_arbitrary_arrow_collection.lcm  lcmt_arbitrary_arrow_info.lcm
multibody/rigid_body_plant/: rigid_body_plant.cc  rigid_body_plant.h
multibody/rigid_body_plant/visualization/: arrow_vis.py  show_frames.py
setup/mac/binary_distribution/: requirements.txt
